--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "curso platzi react avanzado",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --mode production",
+    "lint": "standard",
     "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +18,7 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^4.5.1",
+    "standard": "^16.0.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.1"
@@ -24,5 +26,13 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "standard": {
+    "ignore": [
+      "/api/**"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
