--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.10.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^4.5.1",
     "standard": "^16.0.3",
@@ -25,6 +26,7 @@
     "webpack-dev-server": "^3.11.1"
   },
   "dependencies": {
+    "intersection-observer": "^0.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^4.1.0",
@@ -36,6 +38,7 @@
     ]
   },
   "eslintConfig": {
+    "parser": "babel-eslint",
     "extends": "./node_modules/standard/eslintrc.json"
   }
 }
