--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --mode production",
     "lint": "standard",
     "vercel-build": "npm run build",
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --history-api-fallback",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
+    "@reach/router": "^1.3.4",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.5.0",
     "intersection-observer": "^0.12.0",
