--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^4.5.1",
+    "prop-types": "^15.7.2",
     "standard": "^16.0.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
