--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "standard": "^16.0.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.1"
+    "webpack-dev-server": "^3.11.1",
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
