--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.1",
-    "webpack-pwa-manifest": "^4.3.0"
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^6.1.1"
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
